--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
+        <img src="recurs/logoEmp.png" width="150px">
         <div>
             <div class="textos">
                 <h1 class="title">Neko no Mori</h1>
                 <p class="subtitle">Coffee and Cats</p>
             </div>
         </div>
-
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -24,6 +24,7 @@
                 <li><a href="login.html">Formulario de usuario</a></li>
             </ul>
         </nav>
+        
     </header>
 
     <main >
@@ -41,6 +42,19 @@
             </div>
            <img class="gatito" src="recurs/logo1.jpg" width="230">
         </article>
+        </section>
+        <section class="local">
+            <article>
+                <h2>Nuestras instalaciones</h2>
+                <p> 
+                    Nuestra cafetería cuenta con un espacio amplio, ordenado y luminoso, diseñado para el confort 
+                    de nuestros clientes y el bienestar de los gatos. Dispone de áreas diferenciadas para consumo, descanso 
+                    y juego felino, mesas funcionales y una decoración en tonos cálidos.Las 
+                    instalaciones se mantienen limpias, ventiladas y seguras, creando un ambiente tranquilo donde es posible 
+                    disfrutar del café en armonía con los gatos.
+                </p>
+
+            </article>
         </section>
         <section class="empleados">
             <article>
@@ -111,37 +125,6 @@
 
         </section>
         <br>
-        <!--Nuestra Misión-->
-        <article class="seccion" >
-            <h2>Misión:</h2><img src="recurs/mision.jpg" width="230" class="img">
-            <p >En Neko no Mori, nuestra misión es ofrecer una experiencia única que combine la excelencia del café artesanal con un ambiente 
-                de serenidad y ternura inspirado en la compañía de gatos rescatados.
-                Nos comprometemos a brindar productos de alta calidad, elaborados con dedicación y respeto por los procesos del café, para que
-                cada taza refleje el cuidado y la pasión que ponemos en nuestro trabajo.
-                Buscamos que nuestros visitantes disfruten no solo de un buen café, sino también de un espacio acogedor donde puedan relajarse, 
-                conectar con la naturaleza y compartir momentos de calma junto a nuestros pequeños anfitriones felinos.
-                En Neko no Mori, cada detalle está pensado para despertar los sentidos, promover el bienestar y celebrar la armonía entre el arte 
-                del café y el amor por los animales.
-            </p>
-        </article>
-        </section>
-         <!--Historia de nuestra empresa-->
-        <article class="seccion" >
-            <h2>Nuestra historia:</h2> <img src="recurs/history.jpg" width="230" class="img">
-            <p > Neko no Mori nació de dos grandes pasiones: los gatos y el buen café.
-                Elegimos este nombre por la calidez de su significado —“Bosque de gatos”—, porque al cruzar
-                nuestras puertas queremos que sientas esa misma sensación: la de adentrarte en un pequeño bosque
-                lleno de ternura, ronroneos y calma.
-                Desde el inicio, nuestra meta fue crear un espacio diferente, acogedor y lleno de cariño, donde las
-                personas pudieran relajarse, disfrutar de una bebida especial y compartir momentos con adorables gatitos
-                rescatados que llenan el ambiente de afecto y tranquilidad.
-                Cada detalle de Neko no Mori fue pensado con dedicación: la decoración cálida, los rincones cómodos, el 
-                aroma del café recién preparado y, por supuesto, la compañía de nuestros pequeños anfitriones felinos, que 
-                hacen de cada visita una experiencia única.
-                Hoy, Neko no Mori representa un sueño hecho realidad: un lugar donde el amor por los animales, la amistad y 
-                la buena energía se encuentran en cada taza. 
-            </p>
-        </article>
     </main>
 
     <div id="promoModal" class="modal">
