--- a/productos.html
+++ b/productos.html
@@ -8,20 +8,23 @@
 </head>
 <body>
     <header>
-    <br>
-        <!--Nombre de nuestra empresa-->
-        <h1 class="title">Neko no Mori</h1>
-        <p class="subtitle">Coffe and cats</p>
-      <nav>
-        <ul>
+        <div>
+            <div class="textos">
+                <h1 class="title">Neko no Mori</h1>
+                <p class="subtitle">Coffee and Cats</p>
+            </div>
+        </div>
+
+        <nav>
+            <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="productos.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
                 <li><a href="contactos.html">Contacto y ubicación</a></li>
                 <li><a href="login.html">Formulario de usuario</a></li>
-        </ul>
-      </nav>
-  </header>
+            </ul>
+        </nav>
+    </header>
     <main class="mainProd">
 
         <section id="productos" class="margen">
