--- a/login.html
+++ b/login.html
@@ -7,21 +7,24 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <br>
-        <!--Nombre de nuestra empresa-->
-        <h1 class="title">Neko no Mori</h1>
-        <p class="subtitle">Coffe and cats</p>
-      <nav>
-        <ul>
+<header>
+        <div>
+            <div class="textos">
+                <h1 class="title">Neko no Mori</h1>
+                <p class="subtitle">Coffee and Cats</p>
+            </div>
+        </div>
+
+        <nav>
+            <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="productos.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
                 <li><a href="contactos.html">Contacto y ubicación</a></li>
                 <li><a href="login.html">Formulario de usuario</a></li>
-        </ul>
-      </nav>
-  </header>
+            </ul>
+        </nav>
+    </header>
 
   <main><section class="login-centro">
       <div class="login-card">
