--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-        <img src="recurs/logoEmp.png" width="150px">
         <div>
             <div class="textos">
                 <h1 class="title">Neko no Mori</h1>
                 <p class="subtitle">Coffee and Cats</p>
             </div>
         </div>
+        <img class="logo"src="recurs/logoEmp.png" width="120px">
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -26,7 +26,6 @@
         </nav>
         
     </header>
-
     <main >
         <section class="index">
             <article class="bienvenido" >
