--- a/productos.html
+++ b/productos.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+   <header>
         <div>
             <div class="textos">
                 <h1 class="title">Neko no Mori</h1>
                 <p class="subtitle">Coffee and Cats</p>
             </div>
         </div>
-
+        <img class="logo"src="recurs/logoEmp.png" width="120px">
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
