--- a/contactos.html
+++ b/contactos.html
@@ -14,7 +14,7 @@
                 <p class="subtitle">Coffee and Cats</p>
             </div>
         </div>
-
+        <img class="logo"src="recurs/logoEmp.png" width="120px">
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
