--- a/productos.html
+++ b/productos.html
@@ -32,30 +32,25 @@
                 <h2>Productos</h2>
 
                 <div class="contenedor-general-carro">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-car">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 1 0-7.5 0v4.5m11.356-1.993 1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 0 1-1.12-1.243l1.264-12A1.125 1.125 0 0 1 5.513 7.5h12.974c.576 0 1.059.435 1.119 1.007ZM8.625 10.5a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm7.5 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" />
-                    </svg>
+                    <div class="contenedor-info-carrito">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-car">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 1 0-7.5 0v4.5m11.356-1.993 1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 0 1-1.12-1.243l1.264-12A1.125 1.125 0 0 1 5.513 7.5h12.974c.576 0 1.059.435 1.119 1.007ZM8.625 10.5a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm7.5 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" />
+                        </svg>
 
-                    <div class="contar-prod">
-                        <span id="contador-productos">1</span>
+                        <div class="contar-prod">
+                            <span id="contador-productos">0</span>
+                        </div>
                     </div>
 
                     <div class="contenedor-carrito oculto">
-                        <div class="carro-productos">
-                            <div class="info-carro-producto">
-                                <span class="cantidad-producto-carrito">1</span>
-                                <span class="nombre-producto-carrito">Latte</span>
-                                <span class="precio-producto-carrito">S/.16</span>
-                            </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-x">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
-                            </svg>
-
+                        <div class="row-productos">
+                            
                         </div>
+                        
 
                         <div class="carro-total">
                             <h3>Total</h3>
-                            <span class="total-pagar">S/.16</span>
+                            <span class="total-pagar">PEN 0</span>
                         </div>
                     </div>
                 </div>
@@ -69,10 +64,10 @@
                         <img class="item" src="recurs/frappuccino.png" width="120">
                     </figure>
                     <div class="info-producto">
-                        <header><h3>Cookies & Creme Frappuccino</h3></header>
+                        <header><h3>Creme Frappuccino</h3></header>
                         <div class="anadir-carrito">
                             <p>PEN 16.00</p>
-                            <button class="carrito"> + </button>
+                            <button class="add-carrito"> + </button>
                         </div>
                         <h4>Descripción</h4>
                         <p>Clásico frappuccino de leche batido con mocha blanco y gotas sabor a chocolate, jarabe de azúcar y decorado con crema batida y topping de galletas trozadas.</p>
@@ -90,7 +85,7 @@
                         <header><h3>Latte helado</h3></header>
                         <div class="anadir-carrito">
                             <p>PEN 12.00</p>
-                            <button class="carrito">+</button>
+                            <button class="add-carrito">+</button>
                         </div>
                         <h4>Descripción</h4>
                         <p>Café Espresso de cuerpo completo mezclado con leche fría y cubos de hielo. Sin endulzantes.</p>  
@@ -107,7 +102,7 @@
                         <header><h3>Chocolate caliente</h3></header>
                         <div class="anadir-carrito">
                             <p>PEN 13.00</p>
-                            <button class="carrito">+</button>
+                            <button class="add-carrito">+</button>
                         </div>
                         <h4>Descripción</h4>
                         <p>Clásico chocolate caliente con leche vaporizada y salsa de chocolate. Sin endulzantes adicionales.</p>
@@ -126,7 +121,7 @@
                     <header><h3>Muffin de Naranja</h3></header>
                     <div class="anadir-carrito">
                         <p>PEN 20.00</p>
-                        <button class="carrito">+</button>
+                        <button class="add-carrito">+</button>
                     </div>
                     <h4>Descripción</h4>
                     <p>Muffin realizado con harina de trigo, aceite vegetal, huevos, jugo de naranja y ralladura de naranja.</p>
