--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             
             <article class="seccion2">
                 <img src="recurs/haru.png" width=300>
-                <h3>Haru</h3>
+                <h3>Haru bros.</h3>
                 <h4>Edad:</h4><p><br>3 meses</p>
                 <h4>Características:</h4><p><br>Amorosa, juguetona y dormilona</p>
                 <button id="boton">Adoptar</button>                
