--- a/reseñas.html
+++ b/reseñas.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
     </header>
-  <main>
+  <main class="mainRese">
     <section class="reseñas-centro">
       <div class="reseñas-panel">
         <h2>Reseñas de nuestros clientes</h2>
