--- a/contactos.html
+++ b/contactos.html
@@ -26,12 +26,11 @@
         </nav>
     </header>
     <main>
-        <br><br><br><br><br><br>
         <section class="cyu">
             <article class="ubic">
                 <!--Ubicación-->
                 <h2>Ubicación</h2>
-                <a href="https://maps.app.goo.gl/5DTBm8wV451D1jEq5"><img src="recurs/ubi.png" width="400" ></a>
+                <a href="https://maps.app.goo.gl/5DTBm8wV451D1jEq5"><img src="recurs/ubi.png" width="90%" ></a>
                 <p>Paucarpata 04001</p>
                 
             </article>
