--- a/contactos.html
+++ b/contactos.html
@@ -25,8 +25,7 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <br><br><br><br><br><br>
+    <main class="mainContacto">
         <section class="cyu">
             <article class="ubic">
                 <!--Ubicación-->
