--- a/login.html
+++ b/login.html
@@ -26,7 +26,8 @@
         </nav>
     </header>
 
-  <main><section class="login-centro">
+  <main class="mainUsuario">
+    <section class="login-centro">
       <div class="login-card">
         <h2>Inicia sesión</h2>
         
