--- a/contactos.html
+++ b/contactos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactos</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="recurs/logoEmp.png" type="image/png">
 </head>
 <body>
     <header>
@@ -28,12 +29,20 @@
     <main>
         <section class="cyu">
             <article class="ubic">
-                <!--Ubicación-->
-                <h2>Ubicación</h2>
-                <a href="https://maps.app.goo.gl/5DTBm8wV451D1jEq5"><img src="recurs/ubi.png" width="90%" ></a>
-                <p>Paucarpata 04001</p>
-                
+                <h2>Nuestra Ubicación</h2>
+                <div id="mapa-dinamico">
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3827.361665421528!2d-71.5368940241031!3d-16.40649763836113!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91424a590c641f0f%3A0x88613e514101e185!2sPlaza%20de%20Armas%20de%20Arequipa!5e0!3m2!1ses-419!2spe!4v1700000000000!5m2!1ses-419!2spe" 
+                        width="100%" 
+                        height="450" 
+                        style="border:0;" 
+                        allowfullscreen="" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
             </article>
+            
             <article class="contactos">
                 <!--Contactos-->
                 <h2>Contactos</h2>
