--- a/productos.html
+++ b/productos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="recurs/logoEmp.png" type="image/png">
 </head>
 <body id="bodyP">
    <header><hr>
@@ -18,10 +19,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="productos.html">Nuestros Productos</a></li>
+                <li><a href="productos.html">Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="contactos.html">Contacto y ubicación</a></li>
-                <li><a href="login.html">Formulario de usuario</a></li>
+                <li><a href="contactos.html">Contacto</a></li>
+                <li><a href="login.html">Usuario</a></li>
             </ul>
         </nav>
     </header><hr>
@@ -29,7 +30,7 @@
 
         <section id="productos" class="margen">
             <div class="header-prod">
-                <h2>Productos</h2>
+                <h2 id="nombreSeccion">Productos</h2>
 
                 <div class="contenedor-general-carro">
                     <div class="contenedor-info-carrito">
@@ -52,6 +53,18 @@
                             <h3>Total</h3>
                             <span class="total-pagar">PEN 0</span>
                         </div>
+                        <div id="pagar">
+                            <button>Pagar</button>
+                            <br><br>
+                        </div>
+                        <div id="miModal" class="modal-overlay" style="display: none;">
+                            <div class="modal-content">
+                                <img src="recurs/Pago.JPG" alt="Imagen Emergente" class="img-modal">
+                                <br>
+                                <button id="btnListo">Listo</button>
+                            </div>
+                        </div>
+                        <script src="pago.js"></script>
                     </div>
                 </div>
             </div>
