--- a/contactos.html
+++ b/contactos.html
@@ -19,10 +19,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="productos.html">Nuestros Productos</a></li>
-                <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="contactos.html">Contacto y ubicación</a></li>
-                <li><a href="login.html">Formulario de usuario</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="resenas.html">Reseñas</a></li>
+                <li><a href="contactos.html">Contacto</a></li>
+                <li><a href="login.html">Usuario</a></li>
             </ul>
         </nav>
     </header>
