--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
         </div>
         <img class="logo"src="recurs/logoEmp.png" width="120px">
         <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="productos.html">Nuestros Productos</a></li>
-                <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="contactos.html">Contacto y ubicación</a></li>
-                <li><a href="login.html">Formulario de usuario</a></li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="resenas.html">Reseñas</a></li>
+                    <li><a href="contactos.html">Contacto</a></li>
+                    <li><a href="login.html">Usuario</a></li>
+                </ul>
+            </nav>
         </nav>
     </header>
     <main >
