--- a/productos.html
+++ b/productos.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="recurs/logoEmp.png" type="image/png">
 </head>
 <body id="bodyP">
-   <header><hr>
+   <header>
         <div>
             <div class="textos">
                 <h1 class="title">Neko no Mori</h1>
