--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                 </form>
             </div>
         </div>
-        <br>
-        <script src="adoptar.js"></script>       
+        <script src="adop.js"></script>
+        <br>      
     </main>
     <div id="promoModal" class="modal promo-modal">
         <div class="modal-content">
