--- a/contactos.html
+++ b/contactos.html
@@ -6,6 +6,7 @@
     <title>Contactos</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="recurs/logoEmp.png" type="image/png">
+    <link rel="shortcut icon" href="recurs/favicon.ico">
 </head>
 <body>
     <header>
