--- a/contactos.html
+++ b/contactos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactos</title>
+    <title>NEKO NO MORI</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="recurs/logoEmp.png" type="image/png">
     <link rel="shortcut icon" href="recurs/favicon.ico">
