--- a/login.html
+++ b/login.html
@@ -29,9 +29,10 @@
         </nav>
     </header>
 
-  <main class="mainUsuario">
-    <section class="login-centro">
-      <div class="login-card">
+  <main class="login-main">
+    <section class="login-card">
+      <h1 class="login-title">Bienvenido de nuevo</h1>
+      <p class="login-subtitle">Inicia sesión para ver nuestros productos</p>
         <h2>Inicia sesión</h2>
         
         <p class="login-intro">
@@ -64,7 +65,6 @@
           <p class="login-visitante">O continúa sin iniciar sesión</p>
           <a href="productos.html" class="login-link">Ver productos</a>
         </div>
-      </div>
     </section>
   </main>
 
