--- a/productos.html
+++ b/productos.html
@@ -72,42 +72,7 @@
             </div>
             
             <div class="contenedor-productos">
-                <div class="producto">
-                    <figure><img class="item" src="recurs/frappuccino.png" width="120"></figure>
-                    <div class="info-producto">
-                        <header><h3>Creme frappuccino</h3></header>
-                        <div class="anadir-carrito">
-                            <p>PEN 16.5</p>
-                            <button class="add-carrito">+</button>
-                        </div>
-                        <h4>Descripción</h4>
-                        <p>Clásico frappuccino de leche batido con mocha blanco y gotas sabor a chocolate, jarabe de azúcar y decorado con crema batida.</p>
-                    </div>`
-                </div>
-                <div class="producto">
-                    <figure><img class="item" src="recurs/CaramelFrappuccino.jpg" width="120"></figure>
-                    <div class="info-producto">
-                        <header><h3>Caramel Frappuccino</h3></header>
-                        <div class="anadir-carrito">
-                            <p>PEN 16.5</p>
-                            <button class="add-carrito">+</button>
-                        </div>
-                        <h4>Descripción</h4>
-                        <p>Clásico frappuccino de leche batido con mocha blanco y gotas sabor a chocolate, jarabe de azúcar y decorado con crema batida.</p>
-                    </div>`
-                </div>
-                <div class="producto">
-                    <figure><img class="item" src="recurs/muffin.png" width="120"></figure>
-                    <div class="info-producto">
-                        <header><h3>Muffin</h3></header>
-                        <div class="anadir-carrito">
-                            <p>PEN 9.00</p>
-                            <button class="add-carrito">+</button>
-                        </div>
-                        <h4>Descripción</h4>
-                        <p>Sabor clásico y familiar para compartir</p>
-                    </div>`
-                </div>
+                <!-- Productos se cargan aquí dinámicamente -->
             </div>         
             
         </section>
