--- a/productos.html
+++ b/productos.html
@@ -49,7 +49,16 @@
                         <div class="row-productos">
                             
                         </div>
-                        
+
+                        <h3>Datos del cliente</h3>
+                        <input type="email" id="clienteEmail" placeholder="Gmail" required>
+                        <input type="text" id="clienteTelefono" placeholder="Teléfono" required>
+                        <input type="text" id="clienteDireccion" placeholder="Dirección" required>
+
+                        <select id="tipoEntrega">
+                            <option value="tienda">Recojo en tienda</option>
+                            <option value="delivery">Delivery</option>
+                        </select>
 
                         <div class="carro-total">
                             <h3>Total</h3>
