--- a/productos.html
+++ b/productos.html
@@ -70,11 +70,21 @@
                         </div>
                         <div id="miModal" class="modal-overlay" style="display: none;">
                             <div class="modal-content">
-                                <img src="recurs/Pago.JPG" alt="Imagen Emergente" class="img-modal">
-                                <br>
-                                <button id="btnListo">Listo</button>
+                                <h2>🧾 Datos del pedido</h2>
+                                <input type="email" id="clienteEmail" placeholder="Correo electrónico" required><br><br>
+                                <input type="text" id="clienteTelefono" placeholder="Teléfono" required><br><br>
+                                <input type="text" id="clienteDireccion" placeholder="Dirección" required><br><br>
+
+                                <select id="tipoEntrega">
+                                    <option value="delivery">Delivery</option>
+                                    <option value="tienda">Recojo en tienda</option>
+                                </select>
+
+                                <br><br>
+                                <button id="btnListo">Confirmar pedido</button>
                             </div>
                         </div>
+
                         
                     </div>
                 </div>
