--- a/productos.html
+++ b/productos.html
@@ -55,36 +55,25 @@
                         <input type="text" id="clienteTelefono" placeholder="Teléfono" required>
                         <input type="text" id="clienteDireccion" placeholder="Dirección" required>
 
-                        <select id="tipoEntrega">
-                            <option value="tienda">Recojo en tienda</option>
-                            <option value="delivery">Delivery</option>
-                        </select>
+                    <select id="tipoEntrega">
+  <option value="tienda">Recojo en tienda</option>
+  <option value="delivery">Delivery</option>
+</select>
+                        
 
                         <div class="carro-total">
                             <h3>Total</h3>
                             <span class="total-pagar">PEN 0</span>
                         </div>
-                        <div id="pagar">
-                            <button>Pagar</button>
+                            <button id="pagar">Pagar</button>
                             <br><br>
-                        </div>
                         <div id="miModal" class="modal-overlay" style="display: none;">
                             <div class="modal-content">
-                                <h2>🧾 Datos del pedido</h2>
-                                <input type="email" id="clienteEmail" placeholder="Correo electrónico" required><br><br>
-                                <input type="text" id="clienteTelefono" placeholder="Teléfono" required><br><br>
-                                <input type="text" id="clienteDireccion" placeholder="Dirección" required><br><br>
-
-                                <select id="tipoEntrega">
-                                    <option value="delivery">Delivery</option>
-                                    <option value="tienda">Recojo en tienda</option>
-                                </select>
-
-                                <br><br>
-                                <button id="btnListo">Confirmar pedido</button>
+                                <img src="recurs/Pago.JPG" alt="Imagen Emergente" class="img-modal">
+                                <br>
+                                <button id="btnListo">Listo</button>
                             </div>
                         </div>
-
                         
                     </div>
                 </div>
